# treehacks26

./: .gitignore  README.md  arrow_stroke.py  characters.py  draw.py  draw_windows.py  launcher.py  main_app.py  old_launcher.py  pyproject.toml  requirements.txt  treehacks_2026.code-workspace
docs/: BACKEND_FLOW.md
experiments/: arrow_stroke.py  arrow_stroke_error.py  draw_svg.py  drawing.py  grid.py
haptic_feedback/: platformio.ini
haptic_feedback/src/: main.cpp
haptic_feedback/test_scripts/: ip_address.cpp
zoom/: app.py  new_app.py  requirements.txt
zoom/templates/: index.html  login.html
