[project]
name = "treehacks26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "shapely>=2.1.2",
    "svg.path>=7.0",
    "requests>=2.32.5",
    "pillow>=12.1.1",
    "colour>=0.1.5",
    "flask-socketio>=5.6.0",
    "flask-cors>=6.0.2",
    "python-dotenv>=1.2.1",
]
